--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 body {
     font-family: Avenir, Montserrat, Arial, sans-serif;
-    background-color: #ffffff;
+    background-image: #ffffff;
     color: whitesmoke;
 }
 
@@ -12,10 +12,10 @@ body {
     text-transform: capitalize;
 }
 
-#it {
-    display: flex;
-    justify-content: center;
-    align-items: center;
+img {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 #c1 {
@@ -25,13 +25,8 @@ body {
     align-items: center;
 }
 
-
-.flex2 {
-    flex : 2;
-}
-
 .pl1 {
-    padding-left: 1em;
+    text-align: justify;
 }
 
 .img {
@@ -62,3 +57,10 @@ body {
 .blue {
     background-color: #3a86ff;
 }
+
+.foot {
+    color: black;
+    text-align: center;
+    font-family: Avenir;
+}
+
