--- a/style.css
+++ b/style.css
@@ -13,10 +13,16 @@ body {
 }
 
 img {
+display: block;
+margin-left: auto;
+margin-right: auto;
+}
+
+/*img {
     display: block;
     margin-left: auto;
     margin-right: auto;
-}
+}*
 
 #c1 {
     font-family: Georgia, 'Times New Roman', Times, serif;
