--- a/style.css
+++ b/style.css
@@ -22,7 +22,7 @@ margin-right: auto;
     display: block;
     margin-left: auto;
     margin-right: auto;
-}*
+}*/
 
 #c1 {
     font-family: Georgia, 'Times New Roman', Times, serif;
